Separate API and impl (#91)
Implemented java module feature.
Moved impl classes to their own package.

Closes #81